--- a/header.css
+++ b/header.css
@@ -1,6 +1,6 @@
 html{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: whitesmoke;
+    background-color: white;
 }
 header{
     width: 100%;
