--- a/contato.css
+++ b/contato.css
@@ -1,3 +1,21 @@
 html{
     font-family: Arial, Helvetica, sans-serif;
 }
+#imagem{
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+    flex-direction:row;
+}
+#contato{
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+    flex-direction:row;
+}
+.digite{
+    display: flex;
+    align-items:center;
+    justify-content:space-around;
+    flex-direction:row;
+}
