--- a/header.css
+++ b/header.css
@@ -67,3 +67,14 @@ footer{
     text-align: center;
  
 }
+.c640 {
+    display: block;
+}
+
+@media (max-width: 640px) {
+
+.c640 {
+display: none;
+}
+
+}
