--- a/header.css
+++ b/header.css
@@ -31,7 +31,7 @@ nav{
 }
     
 
-a{
+a.cabecalho{
     width: max-content;
     height: 50px;
     display: flex;
@@ -65,5 +65,10 @@ footer{
     flex-direction: column;
     margin: 50px;
     text-align: center;
+    text-decoration:none
  
+}
+a.credito{
+
+    color: white;
 }
