--- a/inicio.css
+++ b/inicio.css
@@ -18,5 +18,12 @@ div{
     align-items: center;
     justify-content:space-around;
     flex-direction:row;
+    margin-bottom:80px;
 }
 
+img.arthur{
+    margin: 80px;
+}
+h2#intro{
+    margin-bottom: 80px;
+}
